@@ -56,6 +56,7 @@
  54. Two new INI entries: EFFECTCAP (cap effects), and EFFECTCXL (which is complicated, related to XP).
  55. New Clan Item type: GenClanSailorsCap, allowing clans to assign ship captains at will.
  56. New achievement type: SKILLPROF for becoming proficient, DECONSTRUCTING for learning recipes
+ 57. Wealth now shows bank balances
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
